--- a/assets/css/ceteicean.css
+++ b/assets/css/ceteicean.css
@@ -495,8 +495,57 @@ tei-gap[reason='ellipsis'] {
     text-align: left;
 }
 
+
+/* added stuff */
+
 tei-num {
   unicode-bidi: bidi-override;
   direction: ltr;
   text-align: left;
+}
+
+tei-p {
+  display: block;
+}
+
+tei-div1 {
+  display: block;
+}
+
+tei-div2 {
+  display: block;
+}
+
+tei-div3 {
+  display: block;
+}
+
+tei-head {
+  display: block;
+  text-align: justify;
+  margin-top: 2%;
+  font-size: 1m;
+  font-family: Garamond;
+}
+
+tei-argument {
+  display: block;
+  margin-left: 5%;
+  font-style: italic;
+  font-size: 90%;
+}
+
+h1 {
+  font-family: Garamond;
+}
+
+tei-milestone::before {
+  content: "[" attr(id) "] ";
+  font-style: normal;
+  font-size: 90%;
+  color: green;
+}
+
+tei-name[type='person'] {
+  color: blue;
 }
