--- a/assets/css/ceteicean.css
+++ b/assets/css/ceteicean.css
@@ -498,31 +498,31 @@ tei-gap[reason='ellipsis'] {
 
 /* added stuff */
 
-num {
+tei-num {
   unicode-bidi: bidi-override;
   direction: ltr;
   text-align: left;
 }
 
-p {
+tei-p {
   display: block;
 }
 
-div1 {
+tei-div1 {
   display: block;
 }
 
-div2 {
-  display: block;
-  font-family: Garamond;
-}
-
-div3 {
+tei-div2 {
   display: block;
   font-family: Garamond;
 }
 
-head {
+tei-div3 {
+  display: block;
+  font-family: Garamond;
+}
+
+tei-head {
   display: block;
   text-align: justify;
   margin-top: 2%;
@@ -530,24 +530,20 @@ head {
   font-family: Garamond;
 }
 
-argument {
+tei-argument {
   display: block;
   margin-left: 5%;
   font-style: italic;
   font-size: 90%;
 }
 
-h1 {
-  font-family: Garamond;
-}
-
-milestone::before {
+tei-milestone::before {
   content: "[" attr(id) "] ";
   font-style: normal;
   font-size: 70%;
-  color: lightgreen;
+  color: green;
 }
 
-name[type='person'] {
-  color: lightblue;
+tei-name[type='person'] {
+  color: blue;
 }
