removing useless md files and adding nav bar to english

--- a/assets/css/ceteicean.css
+++ b/assets/css/ceteicean.css
@@ -498,31 +498,31 @@ tei-gap[reason='ellipsis'] {
 
 /* added stuff */
 
-tei-num {
+num {
   unicode-bidi: bidi-override;
   direction: ltr;
   text-align: left;
 }
 
-tei-p {
+p {
   display: block;
 }
 
-tei-div1 {
+div1 {
   display: block;
 }
 
-tei-div2 {
-  display: block;
-  font-family: Garamond;
-}
-
-tei-div3 {
+div2 {
   display: block;
   font-family: Garamond;
 }
 
-tei-head {
+div3 {
+  display: block;
+  font-family: Garamond;
+}
+
+head {
   display: block;
   text-align: justify;
   margin-top: 2%;
@@ -530,20 +530,20 @@ tei-head {
   font-family: Garamond;
 }
 
-tei-argument {
+argument {
   display: block;
   margin-left: 5%;
   font-style: italic;
   font-size: 90%;
 }
 
-tei-milestone::before {
+milestone::before {
   content: "[" attr(id) "] ";
   font-style: normal;
   font-size: 70%;
   color: green;
 }
 
-tei-name[type='person'] {
+name[type='person'] {
   color: blue;
 }
