--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -3,8 +3,8 @@
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 <!-- <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}"> -->
 <link rel="shortcut icon" type="image/jpg" href="{{ 'favicon.ico' | relative_url }}">
-<script src="{{ '/assets/js/CETEI.js' | relative_url }}"></script>
-<link rel="stylesheet" href="{{ '/assets/css/ceteicean.css' | relative_url }}">
+
+<link rel="stylesheet" href="{{ '/assets/css/decameron.css' | relative_url }}">
 <!--<link rel="stylesheet" href="{{ '/assets/css/cody.css' | relative_url }}">
 <!-- <link rel="stylesheet" href="{{ '/assets/css/cody.scss' | relative_url }}"> -->
 
